# rm2_ws

./: .gitignore  README.md
docs/git/: 历史清理与分支收敛.md
src/ecat_manager/: CMakeLists.txt  package.xml
src/ecat_manager/include/ecat_manager/: EcatBusManager.h  EcatSlaveManagerBase.h  EcatSlaveManagerBaseImpl.h
src/ecat_manager/src/: EcatBusManager.cpp
src/ethercat_grant/: CMakeLists.txt  package.xml
src/ethercat_grant/scripts/: postinst
src/rm2_control/rm2_common/: CMakeLists.txt  package.xml
src/rm2_control/rm2_common/include/rm2_common/: eigen_types.h  linear_interpolation.h  lqr.h  math_utilities.h  ori_tool.h  tf_rt_broadcaster.h  traj_gen.h
src/rm2_control/rm2_common/src/: ori_tool.cpp  tf_rt_broadcaster.cpp
src/rm2_control/rm2_common/src/filter/: filters.cpp  imu_complementary_filter.cpp  imu_filter_base.cpp  lp_filter.cpp
src/rm2_control/rm2_hw/: CMakeLists.txt  package.xml  rm2_hw_plugin.xml
src/rm2_control/rm2_hw/config/: actuator_coefficient.yaml  controller.yaml  hw_config_template.yaml
src/rm2_control/rm2_hw/include/rm2_hw/: control_loop.h
src/rm2_control/rm2_hw/launch/: rm2_hw.launch
src/rm2_control/rm2_hw/src/: control_loop.cpp  rm2_hw.cpp
src/rm2_control/rm2_hw/src/hardware_interface/: can_bus.cpp  gpio_manager.cpp  hardware_system.cpp  parse.cpp  socketcan.cpp
src/rm2_control/rm2_hw/urdf/: test.urdf.xacro
src/rm2_control/rm2_msgs/: CMakeLists.txt  package.xml
src/rm2_control/rm2_msgs/msg/: ActuatorState.msg  BalanceState.msg  BusState.msg  ChassisCmd.msg  DbusData.msg  GimbalCmd.msg  GimbalDesError.msg  LocalHeatState.msg  MultiDofCmd.msg  SentryDeviate.msg  ShootBeforehandCmd.msg  ShootCmd.msg  ShootState.msg  TofRadarData.msg
src/rm2_control/rm2_msgs/msg/referee/: BulletAllowance.msg  CapacityData.msg  ClientMapReceiveData.msg  ClientMapSendData.msg  DartClientCmd.msg  DartInfo.msg  DartStatus.msg  EngineerUi.msg  EventData.msg  GameRobotHp.msg  GameRobotStatus.msg  GameStatus.msg  IcraBuffDebuffZoneStatus.msg  ManualToReferee.msg  MapSentryData.msg  PowerHeatData.msg  PowerManagementInitializationExceptionData.msg  PowerManagementProcessStackOverflowData.msg  PowerManagementSampleAndStatusData.msg  PowerManagementSystemExceptionData.msg  PowerManagementUnknownExceptionData.msg  RadarMarkData.msg  RadarToSentry.msg  RfidStatus.msg  RobotHurt.msg  RobotsPositionData.msg  SentryAttackingTarget.msg  ShootData.msg  StateCmd.msg  SupplyProjectileAction.msg
src/rm2_controllers/rm2_calibration_controllers/: CMakeLists.txt  package.xml  rm2_calibration_controllers.xml
src/rm2_controllers/rm2_calibration_controllers/include/rm2_calibration_controllers/: calibration_base.h  mechanical_calibration_controller.h
src/rm2_controllers/rm2_calibration_controllers/src/: calibration_base.cpp  mechanical_calibration_controller.cpp
src/rm2_controllers/rm2_gimbal_controllers/: CMakeLists.txt  package.xml  rm2_gimbal_controllers_plugins.xml
src/rm2_controllers/rm2_gimbal_controllers/config/: gimbal_controller.yaml  test_gimbal_controller.safe.yaml  test_gimbal_controller.standard.yaml
src/rm2_controllers/rm2_gimbal_controllers/include/rm2_gimbal_controllers/: bullet_solver.h  gimbal_base.h  gimbal_controller.h  joint_controller.h  pid_debug_publisher.h
src/rm2_controllers/rm2_gimbal_controllers/launch/: test_gimbal_demo.launch.py
src/rm2_controllers/rm2_gimbal_controllers/src/: bullet_solver.cpp  gimbal_base.cpp  gimbal_controller.cpp  gimbal_controller_parameters.yaml  joint_controller.cpp  pid_debug_publisher.cpp
src/rm2_controllers/rm2_orientation_controller/: CMakeLists.txt  package.xml  rm2_orientation_controller.xml
src/rm2_controllers/rm2_orientation_controller/include/rm2_orientation_controller/: rm2_orientation_controller.h
src/rm2_controllers/rm2_orientation_controller/src/: rm2_orientation_controller.cpp
src/rm2_controllers/robot_state_controller/: CMakeLists.txt  package.xml  robot_state_controler_plugin.xml
src/rm2_controllers/robot_state_controller/include/robot_state_controller/: robot_state_controller.h
src/rm2_controllers/robot_state_controller/src/: robot_state_controller.cpp
src/rm2_dynamic_config/: CMakeLists.txt  package.xml
src/rm2_dynamic_config/config/: diff_drive_controller.schema.yaml  diff_drive_demo.controllers.yaml  gimbal_controller.schema.yaml  test_gimbal_controller.schema.yaml  test_gimbal_controller.snapshot.yaml
src/rm2_dynamic_config/include/rm2_dynamic_config/: main_window.hpp
src/rm2_dynamic_config/launch/: diff_drive_demo.launch.py
src/rm2_dynamic_config/src/: main.cpp  main_window.cpp
src/rm2_dynamic_config/urdf/: diff_drive_mock.urdf
src/rm2_ecat/rm2_ecat_manager/: CMakeLists.txt  package.xml
src/rm2_ecat/rm2_ecat_manager/include/rm2_ecat_manager/: RmEcatMitManager.h  RmEcatStandardSlaveManager.h
src/rm2_ecat/rm2_ecat_manager/src/: RmEcatMitManager.cpp  RmEcatStandardSlaveManager.cpp
src/rm2_ecat/rm2_ecat_mit/: CMakeLists.txt  package.xml
src/rm2_ecat/rm2_ecat_mit/src/: Command.cpp  Configuration.cpp  ConfigurationParser.cpp  Controlword.cpp  Reading.cpp  RmEcatMitSlave.cpp  Statusword.cpp
src/rm2_ecat/rm2_ecat_msgs/: CMakeLists.txt  package.xml
src/rm2_ecat/rm2_ecat_msgs/msg/: RmEcatMitSlaveReading.msg  RmEcatMitSlaveReadings.msg  RmEcatStandardSlaveReading.msg  RmEcatStandardSlaveReadings.msg
src/rm2_ecat/rm2_ecat_ros/: CMakeLists.txt  package.xml  rm2_ecat_ros_plugin.xml
src/rm2_ecat/rm2_ecat_ros/config/: controller.yaml  controller_manager.yaml  setup.yaml
src/rm2_ecat/rm2_ecat_ros/launch/: rm2_ecat.launch
src/rm2_ecat/rm2_ecat_ros/src/: RmEcatHardwareInterface.cpp  RmMitSlaveManagerRos.cpp  RmStandardSlaveManagerRos.cpp  RosMsgConversions.cpp
src/rm2_ecat/rm2_ecat_ros/urdf/: test.urdf.xacro
src/rm2_ecat/rm2_ecat_standard_slave/: CMakeLists.txt  package.xml
src/rm2_ecat/rm2_ecat_standard_slave/src/: Command.cpp  ComplementaryFilter.cpp  Configuration.cpp  ConfigurationParser.cpp  Controlword.cpp  LowPassFilter.cpp  Reading.cpp  RmEcatSlave.cpp  Statusword.cpp
src/soem_interface/soem_interface_rsl/: CMakeLists.txt  package.xml
(+249 files in other folders)
