<?xml version="1.0"?>
<package format="3">
  <name>ethercat_grant</name>
  <version>0.3.2</version>
  <description>Makes it possible to run the ros_ethercat_loop without using sudo. Forked from pr2-grant</description>
  <maintainer email="software@shadowrobot.com">Shadow Robot's software team</maintainer>

  <license>BSD</license>

  <url type="website">http://www.shadowrobot.com/</url>

  <author email="software@shadowrobot.com">Ugo Cupcic</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  
  <exec_depend>libcap-dev</exec_depend>

</package>
