<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm2_hw</name>
  <version>0.0.0</version>
  <description>ROS2 control warped interface for RoboMaster motor and some robot hardware</description>
  <maintainer email="3631676002@qq.com">ch</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>rclcpp</depend>
  <depend>rm2_common</depend>
  <depend>rm2_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>controller_interface</depend>
  <depend>transmission_interface</depend>
  <depend>joint_limits</depend>
  <depend>controller_manager</depend>
  <depend>urdf</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend> 

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <hardware_interface plugin="${prefix}/rm2_hw_plugin.xml" />
  </export>
</package>
