<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rm2_gimbal_controllers</name>
  <version>0.0.0</version>
  <description>Gimbal controllers for RM2</description>
  <maintainer email="2136555857@qq.com">idris</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rm2_common</depend>
  <depend>rclcpp</depend>
  
  <depend>pid_controller</depend>
  <depend>controller_interface</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>control_toolbox</depend>
  <depend>tf2_eigen</depend>
  <depend>visualization_msgs</depend>
  <depend>angles</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>rcl_interfaces</depend>
  <depend>rclcpp_components</depend>
  
  <exec_depend>rqt_reconfigure</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <controller_interface plugin="${prefix}/rm2_gimbal_controllers.xml"/>
  </export>
</package>
